Commented outlier plot

--- a/GreenTeam_Dataset_study.ipynb
+++ b/GreenTeam_Dataset_study.ipynb
@@ -1008,6 +1008,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Since there is a huge amount of data in the dataset, it is used a data visualization techniques to inspect the data’s distribution and verify the presence of outliers."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
