Progressing, still need to make many modifications and finish the third task with all racks

--- a/GreenTeam_Power_study.ipynb
+++ b/GreenTeam_Power_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -13780,7 +13780,7 @@
        " [114948 rows x 3 columns]}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13798,7 +13798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -27512,7 +27512,7 @@
        " [114948 rows x 3 columns]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27528,7 +27528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -41256,7 +41256,7 @@
        " [114948 rows x 3 columns]}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41272,7 +41272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41282,7 +41282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -42272,6 +42272,7 @@
     }
    ],
    "source": [
+    "# TASK 1:\n",
     "# Now we compute the total input power for each node, summing the values of P0 and P1 input power, and we compare the obtained value with the one present in the total power dataset for the same node\n",
     "import math\n",
     "\n",
@@ -42283,7 +42284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -42413,7 +42414,7 @@
        "[112614069 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42428,7 +42429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -42870,7 +42871,7 @@
        " [2101940 rows x 5 columns]}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42895,7 +42896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42908,7 +42909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -43350,7 +43351,7 @@
        " [2099803 rows x 5 columns]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43371,7 +43372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -43413,10 +43414,245 @@
     }
    ],
    "source": [
+    "# TASK 2: Energy computation in kWh for each day of the month\n",
     "for key in daily_datasets_P0:\n",
     "    daily_total_energy = daily_datasets_P0[key]['energy_kWh'].cumsum().iloc[-1] + daily_datasets_P1[key]['energy_kWh'].cumsum().iloc[-1]\n",
     "    print(f'Day {key} total energy: {daily_total_energy} kWh')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(daily_datasets_P0)\n",
+    "del(daily_datasets_P1)\n",
+    "del(daily_total_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Emissions:\n",
+      "Day 2021-01-01: 6746.1900000000005 gCO₂eq/kWh\n",
+      "Day 2021-01-02: 6711.12 gCO₂eq/kWh\n",
+      "Day 2021-01-03: 6777.55 gCO₂eq/kWh\n",
+      "Day 2021-01-04: 7324.57 gCO₂eq/kWh\n",
+      "Day 2021-01-05: 7572.8499999999985 gCO₂eq/kWh\n",
+      "Day 2021-01-06: 7799.719999999998 gCO₂eq/kWh\n",
+      "Day 2021-01-07: 7606.7699999999995 gCO₂eq/kWh\n",
+      "Day 2021-01-08: 7702.42 gCO₂eq/kWh\n",
+      "Day 2021-01-09: 7531.810000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-10: 7976.499999999999 gCO₂eq/kWh\n",
+      "Day 2021-01-11: 7767.380000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-12: 6895.89 gCO₂eq/kWh\n",
+      "Day 2021-01-13: 6524.320000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-14: 7216.909999999999 gCO₂eq/kWh\n",
+      "Day 2021-01-15: 7384.58 gCO₂eq/kWh\n",
+      "Day 2021-01-16: 6733.490000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-17: 7147.609999999999 gCO₂eq/kWh\n",
+      "Day 2021-01-18: 7350.61 gCO₂eq/kWh\n",
+      "Day 2021-01-19: 7324.370000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-20: 7127.869999999999 gCO₂eq/kWh\n",
+      "Day 2021-01-21: 6628.739999999998 gCO₂eq/kWh\n",
+      "Day 2021-01-22: 6382.61 gCO₂eq/kWh\n",
+      "Day 2021-01-23: 5926.720000000002 gCO₂eq/kWh\n",
+      "Day 2021-01-24: 5882.97 gCO₂eq/kWh\n",
+      "Day 2021-01-25: 6857.54 gCO₂eq/kWh\n",
+      "Day 2021-01-26: 7258.02 gCO₂eq/kWh\n",
+      "Day 2021-01-27: 7229.329999999998 gCO₂eq/kWh\n",
+      "Day 2021-01-28: 6500.700000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-29: 5804.990000000001 gCO₂eq/kWh\n",
+      "Day 2021-01-30: 5779.88 gCO₂eq/kWh\n",
+      "Day 2021-01-31: 6102.89 gCO₂eq/kWh\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# TASK 3: Operation carbon footprint computation\n",
+    "# First we need to manipulate the data in order to have only 20 computing nodes divided into different days, both for the energy and the direct carbon intensity\n",
+    "\n",
+    "# Carbon intensity:\n",
+    "path = \"../IT-NO_2021_hourly.csv\"\n",
+    "dataset = pd.read_csv(path)\n",
+    "dataset = dataset.drop(columns=['Carbon Intensity gCO₂eq/kWh (LCA)', 'Low Carbon Percentage' ,'Renewable Percentage' ,'Zone Name', 'Zone Id', 'Data Source', 'Data Estimated', 'Data Estimation Method'])\n",
+    "\n",
+    "dataset['Carbon Intensity gCO₂eq/kWh (direct)'] = dataset['Carbon Intensity gCO₂eq/kWh (direct)'].fillna(dataset.describe(include='all').loc['mean'].loc['Carbon Intensity gCO₂eq/kWh (direct)'])\n",
+    "\n",
+    "dataset['Datetime (UTC)'] = pd.to_datetime(dataset['Datetime (UTC)'])\n",
+    "dataset['date'] = dataset['Datetime (UTC)'].dt.date\n",
+    "\n",
+    "end_of_january = pd.to_datetime('2021-01-31') # End of iteration\n",
+    "\n",
+    "grouped = dataset.groupby('date')\n",
+    "daily_dataset = {}\n",
+    "for date, group in grouped:\n",
+    "    if pd.to_datetime(date) <= end_of_january:\n",
+    "        daily_dataset[date] = group.copy()\n",
+    "    else:\n",
+    "        break # Exit the loop when the date exceeds the stop date\n",
+    "\n",
+    "del(grouped)\n",
+    "\n",
+    "i=0\n",
+    "daily_total_emission = []\n",
+    "print('Total Emissions:')\n",
+    "for key in daily_dataset:\n",
+    "    daily_total_emission.append(daily_dataset[key]['Carbon Intensity gCO₂eq/kWh (direct)'].cumsum().iloc[-1])\n",
+    "    print(f'Day {key}: {daily_total_emission[i]} gCO₂eq/kWh')\n",
+    "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Energy:\n",
+      "Day 2021-01-01: 266.1117777777052 kWh\n",
+      "Day 2021-01-02: 271.0888888889253 kWh\n",
+      "Day 2021-01-03: 272.3563888888789 kWh\n",
+      "Day 2021-01-04: 271.8186666666693 kWh\n",
+      "Day 2021-01-05: 274.1848333333562 kWh\n",
+      "Day 2021-01-06: 276.17577777779087 kWh\n",
+      "Day 2021-01-07: 274.71811111103426 kWh\n",
+      "Day 2021-01-08: 271.7474999999471 kWh\n",
+      "Day 2021-01-09: 273.4946666666514 kWh\n",
+      "Day 2021-01-10: 273.17455555557024 kWh\n",
+      "Day 2021-01-11: 273.9931666667088 kWh\n",
+      "Day 2021-01-12: 273.75911111110355 kWh\n",
+      "Day 2021-01-13: 217.112777777718 kWh\n",
+      "Day 2021-01-14: 31.16661111111068 kWh\n",
+      "Day 2021-01-15: 132.97883333333039 kWh\n",
+      "Day 2021-01-16: 274.0867222221932 kWh\n",
+      "Day 2021-01-17: 272.6419444443459 kWh\n",
+      "Day 2021-01-18: 268.75122222211655 kWh\n",
+      "Day 2021-01-19: 165.86194444441497 kWh\n",
+      "Day 2021-01-20: 4.312666666666655 kWh\n",
+      "Day 2021-01-21: 261.2164444443751 kWh\n",
+      "Day 2021-01-22: 260.98855555550097 kWh\n",
+      "Day 2021-01-23: 260.9167777777528 kWh\n",
+      "Day 2021-01-24: 260.5838888888875 kWh\n",
+      "Day 2021-01-25: 261.81338888888274 kWh\n",
+      "Day 2021-01-26: 155.38177777776974 kWh\n",
+      "Day 2021-01-27: 127.90255555554992 kWh\n",
+      "Day 2021-01-28: 261.41944444442794 kWh\n",
+      "Day 2021-01-29: 265.8634999999804 kWh\n",
+      "Day 2021-01-30: 261.3300555555296 kWh\n",
+      "Day 2021-01-31: 129.89949999998964 kWh\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Energy consumption for the first 20 nodes:\n",
+    "nodes = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19] # nodes to keep\n",
+    "\n",
+    "dataset_P0 = dataset_P0[dataset_P0['node'].isin(nodes)]\n",
+    "dataset_P1 = dataset_P1[dataset_P1['node'].isin(nodes)]\n",
+    "\n",
+    "# Now we order P0 once again by date\n",
+    "dataset_P0['timestamp'] = pd.to_datetime(dataset_P0['timestamp'])\n",
+    "dataset_P0['date'] = dataset_P0['timestamp'].dt.date\n",
+    "\n",
+    "grouped = dataset_P0.groupby('date')\n",
+    "daily_datasets_P0 = {}\n",
+    "for day, group in grouped:\n",
+    "    daily_datasets_P0[day] = group.copy()\n",
+    "\n",
+    "# I can do the same for P1\n",
+    "dataset_P1['timestamp'] = pd.to_datetime(dataset_P1['timestamp'])\n",
+    "dataset_P1['date'] = dataset_P1['timestamp'].dt.date\n",
+    "\n",
+    "grouped = dataset_P1.groupby('date')\n",
+    "daily_datasets_P1 = {}\n",
+    "for day, group in grouped:\n",
+    "    daily_datasets_P1[day] = group.copy()\n",
+    "\n",
+    "del(grouped)\n",
+    "\n",
+    "daily_total_energy = []\n",
+    "i=0\n",
+    "print('Total Energy:')\n",
+    "for key in daily_datasets_P0:\n",
+    "    daily_total_energy.append(daily_datasets_P0[key]['energy_kWh'].cumsum().iloc[-1] + daily_datasets_P1[key]['energy_kWh'].cumsum().iloc[-1])\n",
+    "    print(f'Day {key}: {daily_total_energy[i]} kWh')\n",
+    "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation Carbon Footprint, Rack 1:\n",
+      "Day 2021-01-1: 1795240.614126177 gCO2\n",
+      "Day 2021-01-2: 1819310.0640002443 gCO2\n",
+      "Day 2021-01-3: 1845909.0435138212 gCO2\n",
+      "Day 2021-01-4: 1990954.8513066857 gCO2\n",
+      "Day 2021-01-5: 2076360.6151085063 gCO2\n",
+      "Day 2021-01-6: 2154093.7374489903 gCO2\n",
+      "Day 2021-01-7: 2089717.486056082 gCO2\n",
+      "Day 2021-01-8: 2093113.3789495924 gCO2\n",
+      "Day 2021-01-9: 2059909.8653465523 gCO2\n",
+      "Day 2021-01-10: 2178976.8423890057 gCO2\n",
+      "Day 2021-01-11: 2128209.042903661 gCO2\n",
+      "Day 2021-01-12: 1887812.716719948 gCO2\n",
+      "Day 2021-01-13: 1416513.2383107212 gCO2\n",
+      "Day 2021-01-14: 224926.62739388575 gCO2\n",
+      "Day 2021-01-15: 981992.8330566449 gCO2\n",
+      "Day 2021-01-16: 1845560.203215916 gCO2\n",
+      "Day 2021-01-17: 1948738.2885298508 gCO2\n",
+      "Day 2021-01-18: 1975485.421578112 gCO2\n",
+      "Day 2021-01-19: 1214834.25003034 gCO2\n",
+      "Day 2021-01-20: 30740.12735333325 gCO2\n",
+      "Day 2021-01-21: 1731535.8939462064 gCO2\n",
+      "Day 2021-01-22: 1665788.164574096 gCO2\n",
+      "Day 2021-01-23: 1546380.6851909638 gCO2\n",
+      "Day 2021-01-24: 1533007.2008166586 gCO2\n",
+      "Day 2021-01-25: 1795395.7868410689 gCO2\n",
+      "Day 2021-01-26: 1127764.0507466083 gCO2\n",
+      "Day 2021-01-27: 924649.7819544035 gCO2\n",
+      "Day 2021-01-28: 1699409.382499893 gCO2\n",
+      "Day 2021-01-29: 1543334.9588648863 gCO2\n",
+      "Day 2021-01-30: 1510456.3615042944 gCO2\n",
+      "Day 2021-01-31: 792762.3595549369 gCO2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cop computation for the first 20 nodes (rack 1) for the whole month of January 2021\n",
+    "daily_Cop_rack1 = np.multiply(daily_total_energy, daily_total_emission)\n",
+    "\n",
+    "i=0\n",
+    "print('Operation Carbon Footprint, Rack 1:')\n",
+    "for element in daily_Cop_rack1:\n",
+    "    print(f'Day 2021-01-{i+1}: {element} gCO2')\n",
+    "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
