--- a/GreenTeam_Task3.ipynb
+++ b/GreenTeam_Task3.ipynb
@@ -620,7 +620,7 @@
     "### Considerations:\n",
     "To start it's better to generally describe what the different plots refer to: \n",
     "\n",
-    "We can see the trend that follows the data we obtained, as well as its seasonality: the higher the amplitude of seasonality trend demonstrates increased changes in the original data. Along with this, there s a residual data graph which demonstrates the noise / discrepancies between trend and seasonality"
+    "we can see the trend that follows the data we obtained, as well as its seasonality: the higher the amplitude of seasonality trend demonstrates increased changes in the original data. Along with this, there's a residual data graph which demonstrates the noise / discrepancies between trend and seasonality"
    ]
   }
  ],
