--- a/PWR_Dataset_manipulation_export.ipynb
+++ b/PWR_Dataset_manipulation_export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loren\\AppData\\Local\\Temp\\ipykernel_17976\\3156072925.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\loren\\AppData\\Local\\Temp\\ipykernel_8032\\3156072925.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -494,7 +494,7 @@
        "[115262 rows x 980 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "[744 rows x 980 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,13 +951,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dataset exporting as a CSV file for later use\n",
     "output_file = 'PowerDataset_pivoted.csv'\n",
-    "dataset_pivoted.to_csv(output_file, index=False)"
+    "dataset_pivoted.to_csv(output_file, index_label='timestamp')"
    ]
   }
  ],
