Inserted 0 as pwr value when the sample was null

--- a/PWR_Dataset_manipulation_export.ipynb
+++ b/PWR_Dataset_manipulation_export.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loren\\AppData\\Local\\Temp\\ipykernel_9504\\3156072925.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\loren\\AppData\\Local\\Temp\\ipykernel_16568\\3156072925.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -501,7 +501,7 @@
        "[115262 rows x 980 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -959,13 +959,13 @@
        "[744 rows x 980 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Resampling of the DataFrame on an hourly basis and calculate the sum\n",
+    "# Resampling of the DataFrame on an hourly basis and calculate the mean\n",
     "dataset_pivoted = dataset_pivoted.resample('1h').mean()\n",
     "\n",
     "dataset_pivoted"
@@ -973,12 +973,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dataset exporting as a CSV file for later use\n",
-    "output_file = 'PowerDataset_pivoted.csv'\n",
+    "output_file = '../PowerDataset_pivoted.csv'\n",
     "dataset_pivoted.to_csv(output_file, index_label='timestamp')"
    ]
   }
