changes in the lab

--- a/PWR_Dataset_3_years.ipynb
+++ b/PWR_Dataset_3_years.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -135,22 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dataset_P = dataset_P.loc['2020-05-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\loren\\AppData\\Local\\Temp\\ipykernel_17096\\874624293.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  dataset_P[column].interpolate(method='linear', inplace=True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -577,22 +573,22 @@
        "[84498 rows x 980 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Substitution of the NaN values present using a linear interpolation method\n",
-    "for column in dataset_P.columns:\n",
-    "    dataset_P[column].interpolate(method='linear', inplace=True)\n",
+    "dataset_P.interpolate(axis=0, method='linear', inplace=True)\n",
+    "dataset_P.interpolate(axis=1, method='linear', inplace=True)\n",
     "\n",
     "dataset_P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1017,7 @@
        "[21856 rows x 980 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
