Cop and Energy computation done

--- a/CI_Dataset_plotting.ipynb
+++ b/CI_Dataset_plotting.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6ff1747f",
+   "metadata": {},
+   "source": [
+    "## Data manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1db3602",
    "metadata": {},
    "source": [
@@ -220,8 +228,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4b64a0d",
+   "metadata": {},
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a443b4e5",
    "metadata": {},
    "outputs": [],
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2cf2ac0f",
    "metadata": {},
    "outputs": [
@@ -461,7 +477,7 @@
        "[26280 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,6 +507,18 @@
    ],
    "source": [
     "showplot(dataset_CI.index, dataset_CI['LCA+direct'], (20, 10), 'LCA + Direct Carbon Intensity', 'green')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2b8f3d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dataset exporting as a CSV file for later use\n",
+    "output_file = '../CI_Dataset.csv'\n",
+    "dataset_CI.to_csv(output_file, index_label='timestamp')"
    ]
   },
   {
