--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "With the following code we can import the power dataset with the correct formatting and then plot it"
    ]
   },
@@ -654,6 +661,7 @@
     }
    ],
    "source": [
+    "# To get (and plot) the total power consumption for all nodes, each sample of time\n",
     "dataset_P.sum(axis=1).plot()"
    ]
   }
