--- a/PWR_Dataset_manipulation_export.ipynb
+++ b/PWR_Dataset_manipulation_export.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The following code is useful to correctly format, manipulate and save as a CVS file the power dataset we need to work with"
    ]
   },
