--- a/PWR_Dataset_3_years.ipynb
+++ b/PWR_Dataset_3_years.ipynb
@@ -1031,7 +1031,7 @@
     }
    ],
    "source": [
-    "# Resampling of the DataFrame on an hourly basis and calculate the sum\n",
+    "# Resampling of the DataFrame on an hourly basis and calculate the mean\n",
     "dataset_P = dataset_P.resample('1h').mean()\n",
     "\n",
     "dataset_P"
