cell that creates images for all racks added

--- a/Cop_Energy_Dataset.ipynb
+++ b/Cop_Energy_Dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "[21102 rows x 980 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[26280 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "[21102 rows x 980 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "[15263 rows x 980 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,6 +1561,24 @@
     "    plt.legend()\n",
     "    plt.savefig(file_name, dpi=300) # Code to export the plot as an image\n",
     "    plt.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function that exports the plot of a specific node or set of nodes, without plotting\n",
+    "def export_plot(dataset_node, size, ylabel, title, label, color, file_name):\n",
+    "    plt.figure(figsize=size)\n",
+    "    plt.tight_layout() \n",
+    "    plt.grid(True)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.plot(dataset_node, linewidth=2, label=label, color=color)\n",
+    "    plt.legend()\n",
+    "    plt.savefig(file_name, dpi=300) # Code to export the plot as an image"
    ]
   },
   {
@@ -1698,6 +1716,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture \n",
+    "# To avoid printing the output\n",
+    "\n",
+    "# CELL THAT CREATES IMAGES FOR ALL RACKS, RUN ONLY IF NEEDED\n",
+    "for i in range(205, 257):\n",
+    "    rack_id = \"r\" + str(i)\n",
+    "    rack = [col for col in dataset_E.columns if rack_id in col]\n",
+    "    if not rack:\n",
+    "        continue # Skipping a cycle if the rack number isn't present\n",
+    "    export_plot(dataset_E[rack].sum(axis=1), (20,10), 'kWh', 'Energy', rack_id, 'red', f'../PLOTS/E_{rack_id}.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -1739,6 +1775,24 @@
     "\n",
     "# To plot the carbon footprint of specific racks\n",
     "showplot_export(dataset_Cop[rack].sum(axis=1), (20,10), 'gCO2', 'Operational Carbon Footprint', 'r205', 'purple', '../PLOTS/Cop_r205.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture \n",
+    "# To avoid printing the output\n",
+    "\n",
+    "# CELL THAT CREATES IMAGES FOR ALL RACKS, RUN ONLY IF NEEDED\n",
+    "for i in range(205, 257):\n",
+    "    rack_id = \"r\" + str(i)\n",
+    "    rack = [col for col in dataset_Cop.columns if rack_id in col]\n",
+    "    if not rack:\n",
+    "        continue # Skipping a cycle if the rack number isn't present\n",
+    "    export_plot(dataset_Cop[rack].sum(axis=1), (20,10), 'gCO2', 'Operational Carbon Footprint', rack_id, 'purple', f'../PLOTS/Cop_{rack_id}.png')"
    ]
   }
  ],
