--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -513,6 +513,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function that exports the plot of a specific node or set of nodes, without plotting\n",
+    "def export_plot(dataset_node, size, label, file_name):\n",
+    "    plt.figure(figsize=size)\n",
+    "    plt.tight_layout() \n",
+    "    plt.grid(True)\n",
+    "    plt.ylabel('W')\n",
+    "    plt.title('Power')\n",
+    "    plt.plot(dataset_node, linewidth=2, label=label)\n",
+    "    plt.legend()\n",
+    "    plt.savefig(file_name, dpi=300) # Code to export the plot as an image"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -689,6 +707,25 @@
     "\n",
     "# To plot the power consumption of specific racks\n",
     "showplot_export(dataset_P[rack].sum(axis=1), (20,10), 'r205', '../PLOTS/PWR_r205.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture \n",
+    "# To avoid printing the output\n",
+    "\n",
+    "# CELL THAT CREATES IMAGES FOR ALL RACKS, RUN ONLY IF NEEDED\n",
+    "for i in range(205, 257):\n",
+    "    rack_id = \"r\" + str(i)\n",
+    "    rack = [col for col in dataset_P.columns if rack_id in col]\n",
+    "    if not rack:\n",
+    "        continue # Skipping a cycle if the rack number isn't present\n",
+    "    export_plot(dataset_P[rack].sum(axis=1), (20,10), rack_id, f'../PLOTS/PWR_{rack_id}.png')\n",
+    "    "
    ]
   }
  ],
