STL decomposition images extracted

--- a/Cop_Energy_Dataset.ipynb
+++ b/Cop_Energy_Dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "[21102 rows x 980 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[26280 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "[21102 rows x 980 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "[15263 rows x 980 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,9 @@
     "res_robust = stl.fit()\n",
     "fig = res_robust.plot()\n",
     "res_non_robust = STL(dataset_Cop['r205n01'], period=24, robust=False).fit()\n",
-    "add_stl_plot(fig, res_non_robust, [\"Robust\", \"Non-robust\"])"
+    "add_stl_plot(fig, res_non_robust, [\"Robust\", \"Non-robust\"])\n",
+    "\n",
+    "plt.savefig('../PLOTS/Cop_stl.png', dpi=300) # Code to export the plot as an image"
    ]
   },
   {
