--- a/Prophet_sandbox.ipynb
+++ b/Prophet_sandbox.ipynb
@@ -1130,6 +1130,13 @@
    "source": [
     "<span style=\"color:red;\">We need to zoom the area of comparison between prediction and real data to better visualize the gap and also we need to insert the error of the prediction in the plots</span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red;\">I also would like to create the .plot_components for the Carbon Footprint dataset</span>"
+   ]
   }
  ],
  "metadata": {
