correct address for the images inserted

--- a/Report/Layout/titlepage.tex
+++ b/Report/Layout/titlepage.tex
@@ -7,7 +7,7 @@
     
     \vfill % Fills the vertical space above the image
 
-        \includegraphics[width=0.25\textwidth]{Images/GreenTeam_Logo2.png}
+        \includegraphics[width=0.25\textwidth]{Logo/GreenTeam_Logo2.png}
 
         \vfill % Fills the vertical space below the image
         \textbf{Supervisor: Mohsen Seyedkazemi Ardebili}
