--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -7,7 +7,7 @@ The lines in the plots that have a strange or unusual pattern are the result of 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_total.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_total.png}
 \captionsetup{skip=-10pt}
 \caption{PWR total value (sum of all nodes in the server)}
 \label{fig:PWR_total}
@@ -34,7 +34,7 @@ At rack or even node level we see a similar behaviour: a lot of peaks rising fro
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_r205.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_r205.png}
 \captionsetup{skip=-10pt}
 \caption{PWR r205}
 \label{fig:PWR_r205}
@@ -44,7 +44,7 @@ At rack or even node level we see a similar behaviour: a lot of peaks rising fro
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_r205n01.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_r205n01.png}
 \captionsetup{skip=-10pt}
 \caption{PWR r205n01}
 \label{fig:PWR_r205n01}
@@ -57,7 +57,7 @@ The first rack (r205) seems to be the only one with such a regular and stable po
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_r206.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_r206.png}
 \captionsetup{skip=-10pt}
 \caption{PWR r206}
 \label{fig:PWR_r206}
@@ -67,7 +67,7 @@ The first rack (r205) seems to be the only one with such a regular and stable po
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_r206n01.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_r206n01.png}
 \captionsetup{skip=-10pt}
 \caption{PWR r206n01}
 \label{fig:PWR_r206n01}
@@ -80,7 +80,7 @@ Even making a seasonal-trend decomposition it’s hard to highlight any specific
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/PWR_stl_r206n01.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_stl_r206n01.png}
 \caption{PWR r206n01 STL}
 \label{fig:PWR_stl_r206n01}
 \end{figure}
