--- a/Report/Sections/2_CarbonIntensity.tex
+++ b/Report/Sections/2_CarbonIntensity.tex
@@ -7,7 +7,7 @@ With carbon intensity is much easier to highlight patterns and trends; in this c
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/CI_direct.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/CI_direct.png}
 \captionsetup{skip=-10pt}
 \caption{CI direct}
 \label{fig:CI_direct}
@@ -17,7 +17,7 @@ With carbon intensity is much easier to highlight patterns and trends; in this c
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/CI_LCA+direct.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/CI_LCA+direct.png}
 \captionsetup{skip=-10pt}
 \caption{CI LCA + direct}
 \label{CI_LCA+direct}
@@ -42,7 +42,7 @@ Both direct and indirect (LCA) carbon intensity share a similar pattern, showing
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/CI_comparison.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/CI_comparison.png}
 \captionsetup{skip=-10pt}
 \caption{CI comparison}
 \label{CI_comparison}
@@ -55,7 +55,7 @@ Taking advantage of this decomposition we can easily guess the following assumpt
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/CI_stl.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/CI_stl.png}
 \captionsetup{skip=-10pt}
 \caption{CI STL}
 \label{CI_stl}
@@ -69,7 +69,7 @@ During week days the carbon intensity is higher with respect to weekends, as wel
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../PLOTS/CI_prophet.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/CI_prophet.png}
 \captionsetup{skip=-10pt}
 \caption{CI trends}
 \label{CI_prophet}
