--- a/Report/main.tex
+++ b/Report/main.tex
@@ -5,10 +5,10 @@
 
 \usepackage{./Layout/EngReport}
 
-\graphicspath{{../PLOTS/}}
+\graphicspath{{../../PLOTS/}}
 \bibliography{./Layout/Sources}
 \onehalfspacing
-\graphicspath{../PLOTS/}
+\graphicspath{../../PLOTS/}
 \geometry{letterpaper, portrait, includeheadfoot=true, hmargin=1in, vmargin=1in}
 
 %\fontsize{font size}{vertsize (usually 1.2x)}\selectfont
