succeded in compiling latex file

--- a/Report/Sections/3_OperationalCarbonFootprint.tex
+++ b/Report/Sections/3_OperationalCarbonFootprint.tex
@@ -6,7 +6,7 @@ For this reason we will see a combination of the observations we did related bot
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{../../PLOTS/Cop_total.png.png}
+\includegraphics[width=1\textwidth]{../../PLOTS/Cop_total.png}
 \captionsetup{skip=-10pt}
 \caption{Cop total value (sum of all nodes in the server)}
 \label{fig:Cop_total}
