--- a/Report/Sections/3_OperationalCarbonFootprint.tex
+++ b/Report/Sections/3_OperationalCarbonFootprint.tex
@@ -34,3 +34,15 @@ max      408868.699240
 \caption{Cop r206n01 STL}
 \label{fig:Cop_r206n01_stl}
 \end{figure}
+
+\subsection{Cop analysis using Meta's Prophet}
+
+
+\vspace{-10pt}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{../../PLOTS/Cop_prophet.png}
+\caption{Cop trends}
+\label{fig:Cop_prophet}
+\end{figure}
