--- a/Report/main.tex
+++ b/Report/main.tex
@@ -6,7 +6,6 @@
 \usepackage{./Layout/EngReport}
 
 \graphicspath{{../../PLOTS/}}
-\bibliography{./Layout/Sources}
 \onehalfspacing
 \graphicspath{../../PLOTS/}
 \geometry{letterpaper, portrait, includeheadfoot=true, hmargin=1in, vmargin=1in}
@@ -23,6 +22,9 @@
 
 \fontsize{12}{12}\selectfont{
 \input{./Sections/0_Abstract}
+\pagebreak
+
+\input{./Sections/Tools}
 \pagebreak
 
 \input{./Sections/1_Power}
