--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -84,3 +84,15 @@ Even making a seasonal-trend decomposition it’s hard to highlight any specific
 \caption{PWR r206n01 STL}
 \label{fig:PWR_stl_r206n01}
 \end{figure}
+
+\subsection{PWR analysis using Meta's Prophet}
+
+
+\vspace{-10pt}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{../../PLOTS/PWR_prophet.png}
+\caption{PWR trends}
+\label{fig:PWR_prophet}
+\end{figure}
